objects/StudenteTable__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>StudenteTable</relationshipLabel>
        <relationshipName>StudenteTable</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>StudenteTable</relationshipLabel>
        <relationshipName>StudenteTable</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banglore</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today_s_Date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date</label>
        <type>DateTime</type>
    </fields>
    <label>StudenteTable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudenteTable</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Picklistvalidation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Text(Location__c))</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>You Should select location</errorMessage>
    </validationRules>
</CustomObject>